--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,5 +9,8 @@ jobs:
       - name: Hello
         run: |
           echo "Hello World"
+      - name: This will fail
+        run: |
+          echo exit 1
       
       
