--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,9 +6,12 @@ jobs:
   my-first-job:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+
       - name: Hello
         run: |
           echo "Hello World"
-      
-      
-      
+      - name: run python scripts
+        run: |
+          pip install -r requirements.txt
+          python ci.py
