--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -3,6 +3,6 @@ jobs:
   secrets:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "${{secrets.MY_VAR}}"
-    env:
-      MY_VAR: ${{secrets.my_secrets}}
+      - run: echo $MY_VAR
+        env:
+          MY_VAR: ${{secrets.my_secrets}}
