--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -5,4 +5,4 @@ jobs:
     steps:
       - run: echo $MY_VAR
         env:
-          MY_VAR: ${{secrets.my_secrets}}
+          MY_VAR: ${{secrets.MY_SECRETS}}
