--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -3,9 +3,9 @@ jobs:
   secrets:
     runs-on: ubuntu-latest
     steps:
-     - run: |
-         import os
-         print(len((os.getenv('MY_VAR')))
-       shell: python
-       env:
-         MY_VAR: ${{secrets.MY_SECRETS}}
+    - run: |
+        import os
+        print(len(os.getenv('MY_VAR')))
+      shell: python
+      env:
+        MY_VAR: ${{secrets.MY_SECRETS}}
